--- a/css/styles.css
+++ b/css/styles.css
@@ -214,7 +214,7 @@ body .container {
   left: 50%;
   transform: translate(-50%, -50%);
   width: 0;
-  z-index: 5;
+  z-index: 10;
 }
 #clock .minute-hand::before {
   background: #cacaca;
@@ -232,7 +232,7 @@ body .container {
 }
 #clock .minute-hand span {
   background: #16387f;
-  height: 200px;
+  height: 196px;
   position: absolute;
   top: 10px;
   left: 50%;
@@ -364,8 +364,222 @@ body .container {
 #clock .hour-numbers div:nth-child(1) span:nth-child(1) {
   transform: rotate(-30deg) translate(-2px, 0px);
 }
+#clock .hour-numbers div:nth-child(1) span:nth-child(2) {
+  transform: rotate(-30deg) translate(-2px, 0px);
+}
 #clock .hour-numbers div:nth-child(2) span:nth-child(1) {
   transform: rotate(-60deg) translate(-2px, -2px);
+}
+#clock .hour-numbers div:nth-child(2) span:nth-child(2) {
+  transform: rotate(-60deg) translate(-2px, -2px);
+}
+#clock .hour-numbers div:nth-child(3) span:nth-child(1) {
+  transform: rotate(-90deg) translate(0px, -3px);
+}
+#clock .hour-numbers div:nth-child(3) span:nth-child(2) {
+  transform: rotate(-90deg) translate(0px, -3px);
+}
+#clock .hour-numbers div:nth-child(4) span:nth-child(1) {
+  transform: rotate(-120deg) translate(2px, -2px);
+}
+#clock .hour-numbers div:nth-child(4) span:nth-child(2) {
+  transform: rotate(-120deg) translate(2px, -2px);
+}
+#clock .hour-numbers div:nth-child(5) span:nth-child(1) {
+  transform: rotate(-150deg) translate(4px, -2px);
+}
+#clock .hour-numbers div:nth-child(5) span:nth-child(2) {
+  transform: rotate(-150deg) translate(4px, -2px);
+}
+#clock .hour-numbers div:nth-child(6) span:nth-child(2) {
+  transform: rotate(-180deg) translate(5px, 0px);
+}
+#clock .hour-numbers div:nth-child(7) {
+  height: 80px;
+  transform: rotate(-90deg) translate(-50%, -50%);
+}
+#clock .hour-numbers div:nth-child(7) span {
+  font-size: 8px;
+}
+#clock .hour-numbers div:nth-child(7) span:nth-child(1) {
+  transform: rotate(90deg) translate(0px, 6px);
+}
+#clock .hour-numbers div:nth-child(7) span:nth-child(2) {
+  transform: rotate(90deg) translate(0px, 6px);
+}
+#clock .hour-hand {
+  height: 72px;
+  position: absolute;
+  top: 94px;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transform-origin: center;
+  width: 0;
+  z-index: 5;
+}
+#clock .hour-hand::before {
+  background: #070707;
+  border: 2px solid #16387f;
+  border-radius: 50%;
+  box-sizing: border-box;
+  content: "";
+  height: 8px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 8px;
+  z-index: 5;
+}
+#clock .hour-hand span {
+  background: #16387f;
+  height: 72px;
+  position: absolute;
+  top: -12px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 2px;
+}
+#clock .hour-hand span::after {
+  background: #16387f;
+  border-radius: 50%;
+  content: "";
+  height: 6px;
+  position: absolute;
+  bottom: -1px;
+  left: -2px;
+  width: 6px;
+}
+#clock .second-dots {
+  height: 120px;
+  position: absolute;
+  bottom: 32px;
+  left: 50%;
+  transform: translateX(-50%);
+  transform-origin: left;
+  width: 120px;
+}
+#clock .second-dots span {
+  height: calc(100% - 16px);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform-origin: top;
+  width: 0;
+}
+#clock .second-dots span:nth-child(0) {
+  transform: rotate(0deg) translate(-50%, -50%);
+}
+#clock .second-dots span:nth-child(1) {
+  transform: rotate(30deg) translate(-50%, -50%);
+}
+#clock .second-dots span:nth-child(2) {
+  transform: rotate(60deg) translate(-50%, -50%);
+}
+#clock .second-dots span:nth-child(3) {
+  transform: rotate(90deg) translate(-50%, -50%);
+}
+#clock .second-dots span:nth-child(4) {
+  transform: rotate(120deg) translate(-50%, -50%);
+}
+#clock .second-dots span:nth-child(5) {
+  transform: rotate(150deg) translate(-50%, -50%);
+}
+#clock .second-dots span:nth-child(6) {
+  transform: rotate(180deg) translate(-50%, -50%);
+}
+#clock .second-dots span::before, #clock .second-dots span::after {
+  background: #070707;
+  border-radius: 50%;
+  content: "";
+  height: 2px;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 2px;
+}
+#clock .second-dots span::before {
+  top: 0;
+}
+#clock .second-dots span::after {
+  bottom: 0;
+}
+#clock .second-numbers {
+  height: 124px;
+  position: absolute;
+  bottom: 30px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 124px;
+}
+#clock .second-numbers div {
+  display: flex;
+  flex-direction: column;
+  height: calc(100% - 32px);
+  justify-content: space-between;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  text-align: center;
+  transform: translate(-50%, -50%);
+  transform-origin: top;
+  width: 0;
+}
+#clock .second-numbers div span {
+  color: #070707;
+  font: bold 9px "Helvetica", sans-serif;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+}
+#clock .second-numbers div span:nth-child(1) {
+  top: 0;
+}
+#clock .second-numbers div span:nth-child(2) {
+  bottom: 0;
+}
+#clock .second-hand {
+  height: 72px;
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transform-origin: center;
+  width: 0;
+  z-index: 5;
+}
+#clock .second-hand::before {
+  background: #070707;
+  border: 2px solid #16387f;
+  border-radius: 50%;
+  box-sizing: border-box;
+  content: "";
+  height: 8px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 8px;
+  z-index: 5;
+}
+#clock .second-hand span {
+  background: #16387f;
+  height: 72px;
+  position: absolute;
+  top: -12px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 2px;
+}
+#clock .second-hand span::after {
+  background: #16387f;
+  border-radius: 50%;
+  content: "";
+  height: 6px;
+  position: absolute;
+  bottom: -1px;
+  left: -2px;
+  width: 6px;
 }
 
 /*# sourceMappingURL=styles.css.map */
