--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -153,7 +153,7 @@ body {
 		left: 50%;
 		transform: translate(-50%, -50%);
 		width: 0;
-		z-index: 5;
+		z-index: 10;
 
 		&::before {
 			background: $gray;
@@ -172,7 +172,7 @@ body {
 
 		span {
 			background: $blue;
-			height: 200px;
+			height: 196px;
 			position: absolute;
 			top: 10px;
 			left: 50%;
@@ -290,10 +290,222 @@ body {
 			// Number rotation
 			&:nth-child(1) {
 				span:nth-child(1) { transform: rotate(-30deg) translate(-2px, 0px); }
+				span:nth-child(2) { transform: rotate(-30deg) translate(-2px, 0px); }
 			}
 
 			&:nth-child(2) {
 				span:nth-child(1) { transform: rotate(-60deg) translate(-2px, -2px); }
+				span:nth-child(2) { transform: rotate(-60deg) translate(-2px, -2px); }
+			}
+
+			&:nth-child(3) {
+				span:nth-child(1) { transform: rotate(-90deg) translate(0px, -3px); }
+				span:nth-child(2) { transform: rotate(-90deg) translate(0px, -3px); }
+			}
+
+			&:nth-child(4) {
+				span:nth-child(1) { transform: rotate(-120deg) translate(2px, -2px); }
+				span:nth-child(2) { transform: rotate(-120deg) translate(2px, -2px); }
+			}
+
+			&:nth-child(5) {
+				span:nth-child(1) { transform: rotate(-150deg) translate(4px, -2px); }
+				span:nth-child(2) { transform: rotate(-150deg) translate(4px, -2px); }
+			}
+
+			&:nth-child(6) {
+				span:nth-child(2) { transform: rotate(-180deg) translate(5px, 0px); }
+			}
+
+			&:nth-child(7) {
+				height: 80px;
+				transform: rotate(-90deg) translate(-50%, -50%);
+
+				span {
+					font-size: 8px;
+
+					&:nth-child(1) { transform: rotate(90deg) translate(0px, 6px); }
+					&:nth-child(2) { transform: rotate(90deg) translate(0px, 6px); }
+				}
+			}
+		}
+	}
+
+	.hour-hand {
+		height: 72px;
+		position: absolute;
+		top: 94px;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		transform-origin: center;
+		width: 0;
+		z-index: 5;
+
+		&::before {
+			background: $black;
+			border: 2px solid $blue;
+			border-radius: 50%;
+			box-sizing: border-box;
+			content: '';
+			height: 8px;
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			transform: translate(-50%, -50%);
+			width: 8px;
+			z-index: 5;
+		}
+
+		span {
+			background: $blue;
+			height: 72px;
+			position: absolute;
+			top: -12px;
+			left: 50%;
+			transform: translateX(-50%);
+			width: 2px;
+
+			&::after {
+				background: $blue;
+				border-radius: 50%;
+				content: '';
+				height: 6px;
+				position: absolute;
+				bottom: -1px;
+				left: -2px;
+				width: 6px;
+			}
+		}
+	}
+
+	.second-dots {
+		height: 120px;
+		position: absolute;
+		bottom: 32px;
+		left: 50%;
+		transform: translateX(-50%);
+		transform-origin: left;
+		width: 120px;
+
+		span {
+			height: calc(100% - 16px);
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			transform-origin: top;
+			width: 0;
+
+			@for $i from 0 through 6 {
+			    &:nth-child(#{$i}) {
+			        transform: rotate(#{$i*30}deg)
+			        		   translate(-50%, -50%);
+			    }
+			}
+
+			&::before,
+			&::after {
+				background: $black;
+				border-radius: 50%;
+				content: '';
+				height: 2px;
+				position: absolute;
+				left: 50%;
+				transform: translateX(-50%);
+				width: 2px;
+			}
+
+			&::before {
+				top: 0;
+			}
+
+			&::after {
+				bottom: 0;
+			}
+		}
+	}
+
+	.second-numbers {
+		height: 124px;
+		position: absolute;
+		bottom: 30px;
+		left: 50%;
+		transform: translateX(-50%);
+		width: 124px;
+
+		div {
+			display: flex;
+			flex-direction: column;
+			height: calc(100% - 32px);
+			justify-content: space-between;
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			text-align: center;
+			transform: translate(-50%, -50%);
+			transform-origin: top;
+			width: 0;
+
+			span {
+				color: $black;
+				font: bold 9px $sans-serif;
+				position: absolute;
+				left: 50%;
+				transform: translateX(-50%);
+
+				&:nth-child(1) {
+					top: 0;
+				}
+
+				&:nth-child(2) {
+					bottom: 0;
+				}
+			}
+		}
+	}
+
+	.second-hand {
+		height: 72px;
+		position: absolute;
+		bottom: 20px;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		transform-origin: center;
+		width: 0;
+		z-index: 5;
+
+		&::before {
+			background: $black;
+			border: 2px solid $blue;
+			border-radius: 50%;
+			box-sizing: border-box;
+			content: '';
+			height: 8px;
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			transform: translate(-50%, -50%);
+			width: 8px;
+			z-index: 5;
+		}
+
+		span {
+			background: $blue;
+			height: 72px;
+			position: absolute;
+			top: -12px;
+			left: 50%;
+			transform: translateX(-50%);
+			width: 2px;
+
+			&::after {
+				background: $blue;
+				border-radius: 50%;
+				content: '';
+				height: 6px;
+				position: absolute;
+				bottom: -1px;
+				left: -2px;
+				width: 6px;
 			}
 		}
 	}
