--- a/css/styles.css
+++ b/css/styles.css
@@ -13,9 +13,10 @@ body .container {
 
 #clock {
   background: white;
-  border: 4px solid white;
+  background: radial-gradient(at 65% 35%, white, #f1f1f1, white);
+  border: 2px solid white;
   border-radius: 50%;
-  box-shadow: 0 2px 4px rgba(7, 7, 7, 0.1), 0 16px 64px rgba(7, 7, 7, 0.1), inset 0 8px 24px rgba(7, 7, 7, 0.1), inset 0 32px 0 rgba(202, 202, 202, 0.1), inset 0 -16px 0 rgba(202, 202, 202, 0.2);
+  box-shadow: 0 2px 4px rgba(7, 7, 7, 0.1), 0 16px 64px rgba(7, 7, 7, 0.1), inset 0 8px 24px rgba(7, 7, 7, 0.1), inset 0 40px 0 rgba(202, 202, 202, 0.1), inset 0 -16px 0 rgba(202, 202, 202, 0.2), 0 0 0px 2px white, 0 0 0 3px #f1f1f1, 0 0 0 5px #ebebeb;
   box-sizing: border-box;
   height: 100%;
   position: relative;
@@ -213,6 +214,7 @@ body .container {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  transform-origin: top;
   width: 0;
   z-index: 10;
 }
@@ -413,7 +415,7 @@ body .container {
   top: 94px;
   left: 50%;
   transform: translate(-50%, -50%);
-  transform-origin: center;
+  transform-origin: top;
   width: 0;
   z-index: 5;
 }
@@ -544,7 +546,7 @@ body .container {
   bottom: 20px;
   left: 50%;
   transform: translate(-50%, -50%);
-  transform-origin: center;
+  transform-origin: top;
   width: 0;
   z-index: 5;
 }
